--- a/.github/workflows/update-nuget-dev.windows.yml
+++ b/.github/workflows/update-nuget-dev.windows.yml
@@ -1,6 +1,9 @@
 name: "Update NuGet Packages"
 
-on:
+on:  
+  push:
+    branches:
+      - fix_nukeeper_action
   schedule:
     - cron:  '0 0 * * 3'
 
