--- a/.github/workflows/update-nuget-dev.windows.yml
+++ b/.github/workflows/update-nuget-dev.windows.yml
@@ -20,5 +20,5 @@ jobs:
         dotnet-version: 3.1.100
 
     - name: Update NuGet Packages
-      run: ./.build/update_nuget_packages.ps1 -repository_name "${{ github.REPOSITORY }}" -github_token "${{ secrets.NUKEEPER_PIPELINE_TOKEN }}"
+      run: ./.build/update_nuget_packages.ps1 -repository_name "${{ github.REPOSITORY }}" -github_token "${{ secrets.NUKEEPER_PIPELINE_TOKEN }}" -exclude "Microsoft.CodeCoverage"
       shell: pwsh
