--- a/.github/workflows/update-nuget-dev.windows.yml
+++ b/.github/workflows/update-nuget-dev.windows.yml
@@ -13,11 +13,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout code
+      uses: actions/checkout@v2
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.100
+        dotnet-version: '5.0.x'
 
     - name: Update NuGet Packages
       run: ./.build/update_nuget_packages.ps1 -repository_name "${{ github.REPOSITORY }}" -github_token "${{ secrets.NUKEEPER_PIPELINE_TOKEN }}" -exclude "Microsoft.CodeCoverage"
