--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Use Nerdbank.GitVersioning to set version variables: https://github.com/AArnott/nbgv
       - name: Set version
-        uses: aarnott/nbgv@v0.3
+        uses: aarnott/nbgv@master
         with:
           setAllVars: true
 
