--- a/.github/workflows/update-nuget-dev.windows.yml
+++ b/.github/workflows/update-nuget-dev.windows.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.x'
+        dotnet-version: '3.1.412'
 
     - name: Update NuGet Packages
       run: ./.build/update_nuget_packages.ps1 -repository_name "${{ github.REPOSITORY }}" -github_token "${{ secrets.NUKEEPER_PIPELINE_TOKEN }}" -exclude "Microsoft.CodeCoverage"
