Warn on unused using directives

--- a/.editorconfig
+++ b/.editorconfig
@@ -68,6 +68,8 @@ dotnet_diagnostic.CA1822.severity = suggestion
 dotnet_diagnostic.SA1629.severity = error
 # SA1612: Element parameter documentation should match element parameters
 dotnet_diagnostic.SA1612.severity = warning
+# IDE0005: Using directive is unnecessary.
+dotnet_diagnostic.IDE0005.severity = warning
 # IDE0051: Remove unused private members
 dotnet_diagnostic.IDE0051.severity = warning
 # SA1106: Code should not contain empty statements
