--- a/CodeMaid.config
+++ b/CodeMaid.config
@@ -36,6 +36,9 @@
             <setting name="Cleaning_PerformPartialCleanupOnExternal" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="Cleaning_AutoCleanupOnFileSave" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
