Reduce warnings and harden code base (#27)
* Ignore obsolete message here

* Move test code analysis suppressions into GlobalSuppressions file

* Warn on unused using directives

* Format document on save

* Unreachable code is an error

* Treat warnings as errors

--- a/.editorconfig
+++ b/.editorconfig
@@ -64,10 +64,14 @@ dotnet_naming_symbols.constant_fields.required_modifiers          = const
 ###################################
 # CA1822: Member Configure does not access instance data and can be marked as static (Shared in VisualBasic)
 dotnet_diagnostic.CA1822.severity = suggestion
+# CS0162: Unreachable code detected
+dotnet_diagnostic.CS0162.severity = error
 # SA1629: Documentation text should end with a period
 dotnet_diagnostic.SA1629.severity = error
 # SA1612: Element parameter documentation should match element parameters
 dotnet_diagnostic.SA1612.severity = warning
+# IDE0005: Using directive is unnecessary.
+dotnet_diagnostic.IDE0005.severity = warning
 # IDE0051: Remove unused private members
 dotnet_diagnostic.IDE0051.severity = warning
 # SA1106: Code should not contain empty statements
