Run on workflow dispatch

--- a/.github/workflows/update-nuget-dev.windows.yml
+++ b/.github/workflows/update-nuget-dev.windows.yml
@@ -3,6 +3,7 @@ name: "Update NuGet Packages"
 on:
   schedule:
     - cron:  '0 0 * * 3'
+  workflow_dispatch:
 
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
