--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ env:
 
 jobs:
   build:
-
     runs-on: windows-latest
 
     steps:
@@ -30,14 +29,11 @@ jobs:
         with:
           setAllVars: true
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v1
+      - name: Run dotnet pipeline
+        uses: addnab/docker-run-action@v3
         with:
-          dotnet-version: '6.0.x'
-
-      - name: Run build script
-        run: ./.build/run_full_pipeline.ps1 -configuration ${{ env.BUILD_CONFIGURATION }} -testResultsDirectory "${{ env.TEST_RESULTS_DIR }}" -benchmark ${{ env.RUN_BENCHMARK }} -compress ${{ env.COMPRESS_ARTIFACTS }}
-        shell: pwsh
+          image: flabit/dotnet-pipeline:latest
+          options: -v ${{ github.workspace }}:/build/source -e SOLUTION_FILE=./FlabIt.Guardians.sln -e CONFIGURATION=${{ env.BUILD_CONFIGURATION }} -e FRAMEWORK=net6.0 -e COMPRESS_ARTIFACTS=${{ env.COMPRESS_ARTIFACTS }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v1
