--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Run dotnet pipeline
         uses: addnab/docker-run-action@v3
         with:
-          image: flabit/dotnet-pipeline:latest
+          image: dotnet-pipeline:latest
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           options: -v ${{ github.workspace }}:/build/source -e SOLUTION_FILE=./FlabIt.Guardians.sln -e CONFIGURATION=${{ env.BUILD_CONFIGURATION }} -e FRAMEWORK=net6.0 -e COMPRESS_ARTIFACTS=${{ env.COMPRESS_ARTIFACTS }}
