Disable benchmarks for now as they only run on net5.0
Maybe benchmarks will be removed in future

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ env:
   IS_PRERELEASE: "true"
   NUGET_PACKAGES_SOURCE_NAME: "nuget.org"
   TEST_RESULTS_DIR: "./test-results/"
-  RUN_BENCHMARK: "true"
+  RUN_BENCHMARK: "false"
   COMPRESS_ARTIFACTS: "true"
 
 jobs:
