--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   BUILD_CONFIGURATION: "Release"
   TEST_RESULTS_DIR: "./test-results/"
-  RUN_BENCHMARK: "false"
   COMPRESS_ARTIFACTS: "true"
 
 jobs:
@@ -36,7 +35,7 @@ jobs:
           dotnet-version: '6.0.x'
 
       - name: Run build script
-        run: ./.build/run_full_pipeline.ps1 -configuration ${{ env.BUILD_CONFIGURATION }} -testResultsDirectory "${{ env.TEST_RESULTS_DIR }}" -benchmark ${{ env.RUN_BENCHMARK }} -compress ${{ env.COMPRESS_ARTIFACTS }}
+        run: ./.build/run_full_pipeline.ps1 -configuration ${{ env.BUILD_CONFIGURATION }} -testResultsDirectory "${{ env.TEST_RESULTS_DIR }}" -compress ${{ env.COMPRESS_ARTIFACTS }}
         shell: pwsh
 
       - name: Upload build artifacts
@@ -50,10 +49,3 @@ jobs:
         with:
           name: Coverage Report v${{ env.NBGV_AssemblyInformationalVersion }}
           path: "./coverage-reports.zip"
-
-      - name: Benchmark reports
-        uses: actions/upload-artifact@v1
-        if: env.RUN_BENCHMARK == 'true'
-        with:
-          name: Benchmark Report v${{ env.NBGV_AssemblyInformationalVersion }}
-          path: "./benchmark-reports.zip"
